# Executable-Analyzer

./: CMakeLists.txt  README.md
scripts/: buildrun_windows_windows.bat
src/: HistoryManager.cpp  HistoryManager.h  ImGuiFileBrowser.cpp  foxui.cpp  foxui.h  main.cpp
src/workers/exe/: ElfParser.cpp  ElfParser.hpp  ExeParser.cpp  ExeParser.hpp  PEParser.cpp  PEParser.h  UnknownFile.cpp  UnknownFile.h
